<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <EditText android:id="@+id/edit_name"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:hint="@string/edit_name"
        android:layout_height="50dp" />
    <EditText android:id="@+id/edit_date"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/edit_date"
        android:layout_height="50dp" />
    <EditText android:id="@+id/edit_neck"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:hint="@string/edit_neck"
        android:layout_height="50dp" />
    <EditText android:id="@+id/edit_bust"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:hint="@string/edit_bust"
        android:layout_height="50dp" />
    <EditText android:id="@+id/edit_chest"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:hint="@string/edit_chest"
        android:layout_height="50dp" />
    <EditText android:id="@+id/edit_waist"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:hint="@string/edit_waist"
        android:layout_height="50dp" />
    <EditText android:id="@+id/edit_hip"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:hint="@string/edit_hip"
        android:layout_height="50dp" />
    <EditText android:id="@+id/edit_inseam"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:hint="@string/edit_inseam"
        android:layout_height="50dp" />
    <EditText android:id="@+id/edit_comment"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:hint="@string/edit_comment"
        android:layout_height="50dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enter"
        android:onClick="sendMessage"/>
</LinearLayout>